--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -1022,14 +1022,38 @@
   "boilerplate.components.Widgets.PerformanceChartWidget.rewards": "Rewards",
   "boilerplate.components.Widgets.PerformanceChartWidget.penalty": "Penalty",
   "boilerplate.components.Widgets.PerformanceChartWidget.notification1": "Notifications",  
-  "boilerplate.components.Widgets.PerformanceChartWidget.orgchar": "Work Classification Demographics",
+  "boilerplate.components.Widgets.PerformanceChartWidget.orgchar": "Organization Level Demographics",
   "boilerplate.components.Widgets.PerformanceChartWidget.marital": "Marital Status Demographics",  
   "boilerplate.components.Widgets.PerformanceChartWidget.ageChart": "Age Demographics",  
   "boilerplate.components.Widgets.PerformanceChartWidget.empwithbestAtt": "Employees with best attendance",  
   "boilerplate.components.Widgets.PerformanceChartWidget.gendercahrt": "Gender Ratio",  
   "boilerplate.components.Widgets.PerformanceChartWidget.ServicePeriodcahrt": "Service Period Demographics",
   "boilerplate.components.Widgets.PerformanceChartWidget.Nationalitycahrt": "Nationality Demographics",
+  "boilerplate.components.Widgets.PerformanceChartWidget.AbscencebichartWidget": "Employee With Highest Abscence",
+  "boilerplate.components.Widgets.PerformanceChartWidget.empwithhighestOver": "Employee With Highest Overtime",
+  "boilerplate.components.Widgets.PerformanceChartWidget.grossSal": "Gross & NetSalary chart",
+  "boilerplate.components.Widgets.PerformanceChartWidget.yearlySal": "Yearly Salary chart",
+  "boilerplate.components.Widgets.PerformanceChartWidget.GenderSalaryBiChartWidget": "Salary for male vs female",
+  
+  "boilerplate.components.Widgets.PerformanceChartWidget.GrossBiChartWidget": "Last Months Gross Payroll",
+  
+  "boilerplate.components.Widgets.PerformanceChartWidget.OvertimeWidget": "Monthly Overtime chart",
+  
+  "boilerplate.components.Widgets.PerformanceChartWidget.AbscenceWidget": "Monthly Abscence chart",
+  
+  "boilerplate.components.Widgets.PerformanceChartWidget.MedicalInsWidget": "Monthly Medical Ins chart",
+  
+  "boilerplate.components.Widgets.PerformanceChartWidget.TaxInsWidget": "Monthly Tax - Social Ins chart",  
+  "boilerplate.components.Widgets.PerformanceChartWidget.LatePerMinWidget": "Late Per Minutes Chart",
+  "boilerplate.components.Widgets.PerformanceChartWidget.WorkingHoursWidget": "Working Hours Chart",  
+  "boilerplate.components.Widgets.PerformanceChartWidget.MonthlyAppraisalWidget": "Monthly Appraisal Chart",
 
+  "boilerplate.components.Widgets.PerformanceChartWidget.AttAbscenceWidget": "Attendance VS Abscence Chart",  
+  "boilerplate.components.Widgets.PerformanceChartWidget.RewardsPenaltyWidget": "Rewards VS Penalty Chart",
+  "boilerplate.components.Widgets.PerformanceChartWidget.OvertimeLateWidget": "Overtime VS Late Arrival vs Early Departial",
+  
+  
+  
   "boilerplate.containers.Payroll.Setting.parentName": "Parent Menu",
   "boilerplate.containers.Payroll.Setting.menuName": "Menu Name",
   "boilerplate.containers.Payroll.Setting.delete": "Delete",
@@ -1046,9 +1070,6 @@
   "boilerplate.containers.Payroll.Setting.formTypeName": "Form Type Name",
   "boilerplate.containers.Payroll.Setting.update": "Update",
   "boilerplate.containers.Payroll.Setting.add": "Add",
-  "boilerplate.containers.Payroll.Setting.department": "Department",
-  "boilerplate.containers.Payroll.Setting.employee": "Employee",
-  "boilerplate.containers.Payroll.Setting.printForm": "Print Form",
   "boilerplate.containers.Payroll.Setting.view": "View",
   "boilerplate.containers.Payroll.Setting.print": "Print",
   "boilerplate.containers.Payroll.Setting.favorites": "Favorites",
@@ -2074,11 +2095,6 @@
   "boilerplate.containers.Payroll.Employee.bankEmployeeCode": "Bank Employee Code",
   "boilerplate.containers.Payroll.Employee.onceYouSubmitItsMeanYouHaveAgreedWithOur": "Once you submit, it means you have agreed with our",
   "boilerplate.containers.Payroll.Employee.termsAndCondition": "Terms and Conditions",
-  "boilerplate.containers.Payroll.Employee.templateInfo": "Template Info",
-  "boilerplate.containers.Payroll.Employee.addOrChangeTemplate": "Add Or Change Template",
-  "boilerplate.containers.Payroll.Employee.templateName": "Template Name",
-  "boilerplate.containers.Payroll.Employee.currency": "Currency",
-  "boilerplate.containers.Payroll.Employee.noTemplateAdded": "No Templates Added",
 
   "boilerplate.containers.Payroll.MainData.codes.id": "Id",
   "boilerplate.containers.Payroll.MainData.codes.preview": "Preview",
