`CreateVacationType`: add  extra needed inputs

--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -2390,6 +2390,15 @@
   "boilerplate.containers.Payroll.vac.Transaction.employeesErrorMes": "يجب اختيار موظف واحد على الأقل",
   "boilerplate.containers.Payroll.vac.Transaction.noDataError": "لا توجد بيانات لعرضها",
   "boilerplate.containers.Payroll.vac.Transaction.startEndDateError": "تاريخ البدء يأتي بعد تاريخ الانتهاء",
+  "boilerplate.containers.Payroll.vac.Transaction.reqNotAllowInShiftVac": "لا يمكن طلب اجازة اثناء اجازة الوردية",
+  "boilerplate.containers.Payroll.vac.Transaction.reqDayNotAllow": "الايام التى لا يسمح بطلب اجازة فيها",
+  "boilerplate.containers.Payroll.vac.Transaction.reqDuringShift": "طلب الاجازة خلال الوردية",
+  "boilerplate.containers.Payroll.vac.Transaction.reqBeforeShiftInMinute": "الطلب غير مسموح قبل بداية الوردية",
+  "boilerplate.containers.Payroll.vac.Transaction.IsOfficialVacation": "اجازة رسمية",
+  "boilerplate.containers.Payroll.vac.Transaction.AllowLessOneDay": "اقل من يوم واحد",
+  "boilerplate.containers.Payroll.vac.Transaction.ReplacementVacOvertimeMinNo": "أقل عدد من الدقائق للإضافية في يوم بديل",
+  "boilerplate.containers.Payroll.vac.Transaction.ReplacementVacHourCheck": "التحقق من الساعة في يوم بديل",
+  "boilerplate.containers.Payroll.vac.Transaction.HaveReplacementDay": "يوجد يوم بديل",
 
   "boilerplate.containers.Payroll.vac.Transaction.LeaveType": "نوع الإجازة",
   "boilerplate.containers.Payroll.vac.Transaction.company": "الشركة",
