--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -2254,7 +2254,7 @@
   "boilerplate.containers.Payroll.vac.code.vacationName": "Vacation name",
   "boilerplate.containers.Payroll.vac.code.element": "Element",
   "boilerplate.containers.Payroll.vac.code.DayValue": "Day value",
-  "boilerplate.containers.Payroll.vac.code.SalaryDeduction": "Salary deduction",
+  "boilerplate.containers.Payroll.vac.code.SalaryDeduction": "Deduction From Salary",
   "boilerplate.containers.Payroll.vac.code.Maximum": "Maximum",
   "boilerplate.containers.Payroll.vac.code.AnnualVacationDeduction": "Annual Vacation deduction",
   "boilerplate.containers.Payroll.vac.code.HalfDay": "Half day",
@@ -2333,6 +2333,15 @@
 
   "boilerplate.containers.Payroll.vac.Transaction.LeaveType": "Leave Type",
   "boilerplate.containers.Payroll.vac.Transaction.company": "Company",
+  "boilerplate.containers.Payroll.vac.Transaction.reqNotAllowInShiftVac": "Request Not Allowed in Shift Vacation",
+  "boilerplate.containers.Payroll.vac.Transaction.reqDayNotAllow": "Request Not Allowed on This Day",
+  "boilerplate.containers.Payroll.vac.Transaction.reqDuringShift": "Request Allowed During Shift",
+  "boilerplate.containers.Payroll.vac.Transaction.reqBeforeShiftInMinute": "Request Not Allowed Before Shift Start by Minute",
+  "boilerplate.containers.Payroll.vac.Transaction.IsOfficialVacation": "Official Vacation",
+  "boilerplate.containers.Payroll.vac.Transaction.AllowLessOneDay": "Allow Less Than One Day",
+  "boilerplate.containers.Payroll.vac.Transaction.ReplacementVacOvertimeMinNo": "Minimum Minutes for Overtime in Replacement Day",
+  "boilerplate.containers.Payroll.vac.Transaction.ReplacementVacHourCheck": "Check Hour in Replacement Day",
+  "boilerplate.containers.Payroll.vac.Transaction.HaveReplacementDay": "Have a Replacement Day",
 
   "boilerplate.containers.Payroll.insurance.arName": "Arabic Name",
   "boilerplate.containers.Payroll.insurance.enName": "English Name",
