finish `MonthOpenCloseAss` page

--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -2028,7 +2028,7 @@
   "boilerplate.containers.Payroll.Employee.personal.employeeCode": "كود الموظف",
   "boilerplate.containers.Payroll.Employee.personal.employeeCodeAlreadyExistReplacedWithNewCode": "رمز الموظف موجود بالفعل، وتم استبداله برمز جديد",
   "boilerplate.containers.Payroll.Employee.personal.employeename": "اسم الموظف",
-  "boilerplate.containers.Payroll.Employee.personal.isHR": "هل اتش ار",
+  "boilerplate.containers.Payroll.Employee.personal.isHR": "مدير موارد بشرية",
   "boilerplate.containers.Payroll.Employee.personal.branches": "الفروع",
   "boilerplate.containers.Payroll.Employee.personal.status": "الحالة",
   "boilerplate.containers.Payroll.Employee.personal.workEmail": "البريد الإلكتروني للعمل",
@@ -2783,6 +2783,7 @@
   "boilerplate.containers.Payroll.assessment.description": "الوصف",
   "boilerplate.containers.Payroll.assessment.arDescription": "الوصف بالعربية",
   "boilerplate.containers.Payroll.assessment.insertDate": "إدراج التاريخ",
+  "boilerplate.containers.Payroll.assessment.addNewEmployee": "إضافة موظف جديد",
   "boilerplate.containers.Payroll.assessment.status": "الحالة",
   "boilerplate.containers.Payroll.assessment.organization": "المؤسسة",
   "boilerplate.containers.Payroll.assessment.monthOpenedSuccessfully": "تم فتح الشهر بنجاح",
