create `OpenCloseMonth` page

--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -1134,6 +1134,21 @@
   "boilerplate.containers.Payroll.Setting.department": "القسم",
   "boilerplate.containers.Payroll.Setting.employee": "الموظف",
   "boilerplate.containers.Payroll.Setting.printForm": "نموذج الطباعة",
+  "boilerplate.containers.Payroll.Setting.lastDayToApproveEmployeeRequests": "آخر يوم للموافقة على طلبات الموظف",
+  "boilerplate.containers.Payroll.Setting.fromDate": "من تاريخ",
+  "boilerplate.containers.Payroll.Setting.toDate": "إلى تاريخ",
+  "boilerplate.containers.Payroll.Setting.attendancePeriodFromDate": "من تاريخ فترة الحضور",
+  "boilerplate.containers.Payroll.Setting.attendancePeriodToDate": "إلى تاريخ فترة الحضور",
+  "boilerplate.containers.Payroll.Setting.lastApprovalDate": "آخر تاريخ للموافقة",
+  "boilerplate.containers.Payroll.Setting.year": "السنة",
+  "boilerplate.containers.Payroll.Setting.month": "الشهر",
+  "boilerplate.containers.Payroll.Setting.company": "الشركة",
+  "boilerplate.containers.Payroll.Setting.openMonth": "فتح الشهر",
+  "boilerplate.containers.Payroll.Setting.closeMonth": "إغلاق الشهر",
+  "boilerplate.containers.Payroll.Setting.updateDate": "تاريخ التحديث",
+  "boilerplate.containers.Payroll.Setting.monthOpenedSuccessfully": "تم فتح الشهر بنجاح",
+  "boilerplate.containers.Payroll.Setting.dateUpdateSuccessfully": "تم تحديث التاريخ بنجاح",
+  "boilerplate.containers.Payroll.Setting.monthClosedSuccessfully": "تم إغلاق الشهر بنجاح",
 
   "boilerplate.containers.Payroll.HumanResources.enName": "الاسم بالانجليزية",
   "boilerplate.containers.Payroll.HumanResources.arName": "الاسم بالعربية",
