--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -1105,6 +1105,21 @@
   "boilerplate.containers.Payroll.Setting.department": "Department",
   "boilerplate.containers.Payroll.Setting.employee": "Employee",
   "boilerplate.containers.Payroll.Setting.printForm": "Print Form",
+  "boilerplate.containers.Payroll.Setting.lastDayToApproveEmployeeRequests": "Last Day To Approve Employee Requests",
+  "boilerplate.containers.Payroll.Setting.fromDate": "From Date",
+  "boilerplate.containers.Payroll.Setting.toDate": "To Date",
+  "boilerplate.containers.Payroll.Setting.attendancePeriodFromDate": "Attendance Period From Date",
+  "boilerplate.containers.Payroll.Setting.attendancePeriodToDate": "Attendance Period To Date",
+  "boilerplate.containers.Payroll.Setting.lastApprovalDate": "Last Approval Date",
+  "boilerplate.containers.Payroll.Setting.year": "Year",
+  "boilerplate.containers.Payroll.Setting.month": "Month",
+  "boilerplate.containers.Payroll.Setting.company": "Company",
+  "boilerplate.containers.Payroll.Setting.openMonth": "Open Month",
+  "boilerplate.containers.Payroll.Setting.closeMonth": "Close Month",
+  "boilerplate.containers.Payroll.Setting.updateDate": "Update Date",
+  "boilerplate.containers.Payroll.Setting.monthOpenedSuccessfully": "Month opened successfully",
+  "boilerplate.containers.Payroll.Setting.dateUpdateSuccessfully": "Date update successfully",
+  "boilerplate.containers.Payroll.Setting.monthClosedSuccessfully": "Month closed successfully",
 
   "boilerplate.containers.Payroll.HumanResources.enName": "En Name",
   "boilerplate.containers.Payroll.HumanResources.arName": "Ar Name",
