create startup `CalculateAttendance` page

--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -1302,6 +1302,31 @@
   "boilerplate.containers.Payroll.Attendance.AttRulesCreateTitle": "اضافة قواعد الحضور والانصراف",
   "boilerplate.containers.Payroll.Attendance.AttRulesUpdateTitle": "تعديل قواعد الحضور والانصراف",
 
+  "boilerplate.containers.Payroll.Attendance.company": "الشركة",
+  "boilerplate.containers.Payroll.Attendance.department": "القسم",
+  "boilerplate.containers.Payroll.Attendance.employee": "الموظف",
+  "boilerplate.containers.Payroll.Attendance.startDate": "تاريخ البداية",
+  "boilerplate.containers.Payroll.Attendance.endDate": "تاريخ النهاية",
+  "boilerplate.containers.Payroll.Attendance.search": "بحث",
+  "boilerplate.containers.Payroll.Attendance.calculateBreak": "حساب وقت الراحة",
+  "boilerplate.containers.Payroll.Attendance.overnightAllowance": "حساب بدل السهر - مرتبات",
+  "boilerplate.containers.Payroll.Attendance.startAndEndDateNotInOpenMonthRange": "تواريخ البداية والنهاية ليس ضمن نطاق الشهر المفتوح",
+  "boilerplate.containers.Payroll.Attendance.postToPayroll": "ترحيل المرتبات",
+  "boilerplate.containers.Payroll.Attendance.rollbackAttendance": "الغاء المعالجة",
+  "boilerplate.containers.Payroll.Attendance.rollbackPost": "الغاء الترحيل للكل",
+  "boilerplate.containers.Payroll.Attendance.calculate": "معالجة",
+  "boilerplate.containers.Payroll.Attendance.cancelLate": "الغاء التاخير الجماعي",
+  "boilerplate.containers.Payroll.Attendance.cancelEarlyLeave": "الغاء الانصراف المبكر",
+  "boilerplate.containers.Payroll.Attendance.id": "الهوية",
+  "boilerplate.containers.Payroll.Attendance.shiftDate": "تاريخ الوردية",
+  "boilerplate.containers.Payroll.Attendance.late": "تأخير",
+  "boilerplate.containers.Payroll.Attendance.durationUntilEnd": "متمم",
+  "boilerplate.containers.Payroll.Attendance.acutanceLeave": "بدل راحة",
+  "boilerplate.containers.Payroll.Attendance.manual": "يدوي",
+  "boilerplate.containers.Payroll.Attendance.stop": "ايقاف",
+  "boilerplate.containers.Payroll.Attendance.absent": "غياب",
+  "boilerplate.containers.Payroll.Attendance.weekendLeave": "اجازة وردية",
+
   "boilerplate.containers.Payroll.Attendance.ChoiceOne": "الخيار الاول",
   "boilerplate.containers.Payroll.Attendance.ChoiceTwo": "الخيار الثانى",
   "boilerplate.containers.Payroll.Attendance.ChoiceThree": "الخيار الثالث",
