--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -1463,7 +1463,31 @@
   "boilerplate.containers.Payroll.Attendance.PrintByDate": "Print By Date",
   "boilerplate.containers.Payroll.Attendance.DetailedAttendanceReport": "Detailed Attendance Report",
 
-
+  "boilerplate.containers.Payroll.Attendance.company": "Company",
+  "boilerplate.containers.Payroll.Attendance.department": "Department",
+  "boilerplate.containers.Payroll.Attendance.employee": "Employee",
+  "boilerplate.containers.Payroll.Attendance.startDate": "Start Date",
+  "boilerplate.containers.Payroll.Attendance.endDate": "End Date",
+  "boilerplate.containers.Payroll.Attendance.search": "Search",
+  "boilerplate.containers.Payroll.Attendance.calculateBreak": "Calculate Break",
+  "boilerplate.containers.Payroll.Attendance.overnightAllowance": "Overnight Allowance",
+  "boilerplate.containers.Payroll.Attendance.startAndEndDateNotInOpenMonthRange": "Start and end dates are not within the open month range",
+  "boilerplate.containers.Payroll.Attendance.postToPayroll": "Post to Payroll",
+  "boilerplate.containers.Payroll.Attendance.rollbackAttendance": "Rollback Attendance",
+  "boilerplate.containers.Payroll.Attendance.rollbackPost": "Rollback Post",
+  "boilerplate.containers.Payroll.Attendance.calculate": "Calculate",
+  "boilerplate.containers.Payroll.Attendance.cancelLate": "Cancel Late",
+  "boilerplate.containers.Payroll.Attendance.cancelEarlyLeave": "Cancel Early Leave",
+  "boilerplate.containers.Payroll.Attendance.id": "ID",
+  "boilerplate.containers.Payroll.Attendance.shiftDate": "Shift Date",
+  "boilerplate.containers.Payroll.Attendance.late": "Late",
+  "boilerplate.containers.Payroll.Attendance.durationUntilEnd": "Duration Until End",
+  "boilerplate.containers.Payroll.Attendance.acutanceLeave": "Acutance Leave",
+  "boilerplate.containers.Payroll.Attendance.manual": "Manual",
+  "boilerplate.containers.Payroll.Attendance.stop": "Stop",
+  "boilerplate.containers.Payroll.Attendance.absent": "Absent",
+  "boilerplate.containers.Payroll.Attendance.weekendLeave": "Weekend",
+  "boilerplate.containers.Payroll.Attendance.extraTime": "Extra Time",
 
   "boilerplate.containers.Payroll.Attendance.lateHoursNotAuth": "Late Hours Not Auth",
   "boilerplate.containers.Payroll.Attendance.lateHoursAuth": "Late Hours Auth",
