FIX: recruitment - JobAdvertisement - Correct the route typo in the public pages of the JobAdvertisement

--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -2811,7 +2811,7 @@
   "boilerplate.containers.Payroll.cv.submitApplication": "تقديم الطلب",
   "boilerplate.containers.Payroll.cv.endDate": "تاريخ الانتهاء",
   "boilerplate.containers.Payroll.cv.save": "حفظ",
-  "boilerplate.containers.Payroll.cv.backToJobVacation": "العودة إلى الوظائف الشاغرة",
+  "boilerplate.containers.Payroll.cv.backToJobVacation": "العودة إلى إعلانات الوظائف",
   "boilerplate.containers.Payroll.cv.courseTitle": "عنوان الدورة",
   "boilerplate.containers.Payroll.cv.editExperience": "تعديل الخبرة",
   "boilerplate.containers.Payroll.cv.department": "القسم",
