--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -2749,7 +2749,7 @@
   "boilerplate.containers.Payroll.cv.submitApplication": "Submit Application",
   "boilerplate.containers.Payroll.cv.endDate": "End Date",
   "boilerplate.containers.Payroll.cv.save": "Save",
-  "boilerplate.containers.Payroll.cv.backToJobVacation": "Back To Job Vacation",
+  "boilerplate.containers.Payroll.cv.backToJobVacation": "Back To Job Advertisements",
   "boilerplate.containers.Payroll.cv.courseTitle": "Course Title",
   "boilerplate.containers.Payroll.cv.editExperience": "Edit Experience",
   "boilerplate.containers.Payroll.cv.department": "Department",
