REFACTOR: Assessment - IndividualDevelopmentPlan -   rename employee words to Development Plan

--- a/app/translations/ar.json
+++ b/app/translations/ar.json
@@ -2849,6 +2849,10 @@
   "boilerplate.containers.Payroll.assessment.month": "الشهر",
   "boilerplate.containers.Payroll.assessment.noFilesUploaded": "لم يتم تحميل أي ملفات",
   "boilerplate.containers.Payroll.assessment.year": "السنة",
+  "boilerplate.containers.Payroll.assessment.developmentPlan": "خطة التطوير",
+  "boilerplate.containers.Payroll.assessment.addDevelopmentPlan": "إضافة خطة التطوير",
+  "boilerplate.containers.Payroll.assessment.editDevelopmentPlan": "تحرير خطة التطوير",
+  "boilerplate.containers.Payroll.assessment.noDevelopmentPlan": "لا توجد خطة التطوير",
   "boilerplate.containers.Payroll.assessment.title": "العنوان",
   "boilerplate.containers.Payroll.assessment.arTitle": "العنوان بالعربية",
   "boilerplate.containers.Payroll.assessment.openAssessmentToEditFor": "فتح التقييم للتحرير لصالح",
