--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -2810,6 +2810,10 @@
   "boilerplate.containers.Payroll.assessment.branch": "Branch",
   "boilerplate.containers.Payroll.assessment.month": "Month",
   "boilerplate.containers.Payroll.assessment.year": "Year",
+  "boilerplate.containers.Payroll.assessment.noDevelopmentPlan": "No Development Plan",
+  "boilerplate.containers.Payroll.assessment.developmentPlan": "Development Plan",
+  "boilerplate.containers.Payroll.assessment.addDevelopmentPlan": "Add Development Plan",
+  "boilerplate.containers.Payroll.assessment.editDevelopmentPlan": "Edit Development Plan",
   "boilerplate.containers.Payroll.assessment.areaOfStrength": "Area Of Strength",
   "boilerplate.containers.Payroll.assessment.areaForDevelopment": "Area For Development",
   "boilerplate.containers.Payroll.assessment.departmentStructureStatus": "Department Structure Status",
